# django-iin-lookup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/iin/: apps.py  lookups.py
